force-app/main/default/objects/MPL_Integration_Settings__c/MPL_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for the MPL / ServiceNow integration. Replaces hardcoded customer-specific values so they can be managed per environment without a deployment.</description>
    <label>MPL Integration Settings</label>
</CustomObject>