force-app/main/default/objects/MPL_Integration_Settings__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>18-character Salesforce Id of the integration Account record.</description>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>