force-app/main/default/objects/MPL_Integration_Settings__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <defaultValue>&quot;City Of Minneapolis Service Desk&quot;</defaultValue>
    <description>Contact Name used to look up the integration Contact record.</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>