force-app/main/default/objects/MPL_Integration_Settings__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <defaultValue>&quot;TOC Queue&quot;</defaultValue>
    <description>Queue Name used for routing integration Cases.</description>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>