force-app/main/default/objects/MPL_Integration_Settings__c/fields/Support_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Support_Queue_Name__c</fullName>
    <defaultValue>&quot;TOC Support&quot;</defaultValue>
    <description>Support Queue Name used for routing support Cases.</description>
    <label>Support Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>